--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
            <p class="howMuch">How much was your bill?</p>
 
-               <div class="bill"><input type="text" id="billAmt" placeholder="$ Bill Amount"></div>
+               <div class="bill"><input type="text" id="billAmt" placeholder="Bill Amount"></div>
 
                <p class="service">How was your service?</p>
 
                 <div class="choose">
                     <select id="serviceQual">
-                        <option value="0">-- Choose an Option --</option>
+                        <option value="0">Choose an Option</option>
                         <option value="0.3">30&#37; &#45; Outstanding</option>
                         <option value="0.2">20&#37; &#45; Good</option>
                         <option value="0.15">15&#37; &#45; It was OK</option>
@@ -48,8 +48,9 @@
     <div class="bottomIcon">&#36;</div>
     <div class="bottomIcon2">&#36;</div>
 
-    <div class="generous">Wow, you are so generous!
-        <div class="center"></div>
+    <div class="generous">
+        <img src="heart.png" alt="heart" class="heart">
+        <span class="wow">Wow, you are so generous!</span>
     </div>
     
 </div>
