--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
  <div id="container">
 
-    <div class="topIcon">&#36;</div>
+    <!-- <div class="topIcon"><span class=>&#36;</span></div> -->
+    <div class="topIcon"><img src="earth2.gif" alt="" width="44px"></div>
 
        <div class="header"><h2>T I P - C A L C U L A T O R</h2></div>
+       
 
            <p class="howMuch">How much was your bill?</p>
 
